lorem tag added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git practice</title>
 </head>
 <body>
     <h1>Heading one</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus hic a, voluptatem rerum laboriosam impedit ratione sequi autem aut minus deserunt voluptate quo soluta consectetur.</p>
 </body>
 </html>
